--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/skim451/javascript-autocomplete#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
     "chai": "^4.1.2",
     "mocha": "^4.1.0"
+  },
+  "devDependencies": {
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.10.0"
   }
 }
