test를 위한 bundling 환경 구성

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ GitHub.sublime-settings
 # End of https://www.gitignore.io/api/sublimetext,webstorm+all,intellij+all
 
 /dist
+/test/bundle-test.js
