--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --watch",
     "server": "webpack-dev-server --inline --public 0.0.0.0:8080"
   },
   "repository": {
@@ -27,5 +27,8 @@
   "devDependencies": {
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
+},
+  "babel": {
+      "presets": ["env"]
   }
 }
