--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "devDependencies": {
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
-},
+  },
   "babel": {
-      "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
